adding css styling

--- a/studentbio.html
+++ b/studentbio.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Student Bio</title>
-    </head>
-    <body>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <title>Student Bio</title>
+
+    <!-- This line is money! It points your HTML to the CSS file. -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Notice the "relative" pathway? It 
+    matches a file inside our current 
+    directory's 'assets' folder. Open it to see
+    our style rules. -->
+
+</head>
+<body>
+    <header>
         <h1>Student Bio</h1>
+    </header>
+
+    <div class="container">
+        <section id="main-bio">
             <h2>Sam Rodriguez</h2>
-                <p>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMDdXzWPnmgyBbly7kBj09wmOXdX1H16O6w2So_QnkBWH5_iz8uQ">
-                </p>
-                <p>
-                    My name is Samuel Rodriguez, I am 23 years old, and I live in Lower East Side Manhattan, where I was born and raised.
-                    I graduated from Cornell University in 2018 with a BS in Biology, and I currently work at an Educational Technology Company
-                    named Amplify for their Math Department. I am taking this course to further my skills in computer science so that I may use it to create technology going forward.
-                </p>
+                    
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMDdXzWPnmgyBbly7kBj09wmOXdX1H16O6w2So_QnkBWH5_iz8uQ" alt="Sam Rodriguez" id="bio-image">
+            
+            <p>
+                My name is Samuel Rodriguez, I am 23 years old, and I live in Lower East Side Manhattan, where I was born and raised.
+                I graduated from Cornell University in 2018 with a BS in Biology, and I currently work at an Educational Technology Company
+                named Amplify for their Math Department. I am taking this course to further my skills in computer science so that I may use it to create technology going forward.
+            </p>
+        </section>
+        <section id="contact-info">    
             <h2>Contact Info</h2>
-                <p>
-                    <ul>
-                        <li>Email:<a href="mailto:samrodriguez826@gmail.com" target="_blank">samrodriguez826@gmail.com</a></li>
-                        <li>Github:<a href="https://github.com/asamrodcky" target="_blank">Samuel Rodriguez</a></li>
-                        <li>Portfolio:<a href="#">Coming Soon</a></li>
-                    </ul>
-                </p>
-    </body>
+            <ul>
+                <li>Email:<a href="mailto:samrodriguez826@gmail.com" target="_blank">samrodriguez826@gmail.com</a></li>
+                <li>Github:<a href="https://github.com/asamrodcky" target="_blank">Samuel Rodriguez</a></li>
+                <li>Portfolio:<a href="#">Coming Soon</a></li>
+            </ul>
+        </section>    
+    </div>
+
+</body>
 </html>
